2009-22-12  Israel Herraiz  <isra@herraiz.org>

        * pymlstats/datamodel.py:
        * pymlstats/fileextractor.py:
        * pymlstats/__init__.py:
        * pymlstats/utils.py:
        * pymlstats/htmlparser.py:
        * pymlstats/database.py:
        * pymlstats/main.py:
        * pymlstats/analyzer.py:
        * pymlstats/version.py:
        * setup.py:
        * mlstats:
        * README:

	Update email addresses, contact URLs, and copyright year.

2009-17-12  Israel Herraiz <isra@herraiz.org>

	* pymlstats/analyzer.py:

	Received date is now set using the Unix From line rather than the
	value in the the header.
	Patch sent by Simón Pena Placer <spenap@gmail.com>

2009-04-03  Carlos Garcia Campos  <carlosgc@libresoft.es>

	* pymlstats/main.py:
	* pymlstats/utils.py:

	Add a function to get the home user directory in a platform
	independent way.
	
2009-02-13  Israel Herraiz <herraiz@libresoft.es>

	* mlstats:
	* pymlstats/__init__.py:
	* pymlstats/analyzer.py:
	* pymlstats/database.py:
	* pymlstats/datamodel.py:
	* pymlstats/fileextractor.py:
	* pymlstats/htmlparser.py:
	* pymlstats/main.py:
	* pymlstats/version.py:
	* pymlstats/utils.py:
	* setup.py:

	Moved URL retrieval and compressed files handling to a new module
	called utils.
	Updated copyright info.
	
2009-02-13  Israel Herraiz <herraiz@libresoft.es>

	* pymlstats/htmlparser.py:
	* pymlstats/main.py:

	MyHTMLParser now returns a list with links that are exclusively
	mboxes. That part has been removed from main.py.
	
2008-10-10  Juan Francisco Gato Luis <jfcogato@gsyc.es>

        * pymlstats/database.py
	added filter function that erase the quotation marks from the e-mails
	address

2008-09-16  Santiago Dueñas Domínguez  <sduenas@gsyc.escet.urjc.es>

	* db/mlstats_model_dbdesigner.png
	* db/mlstats_model_dbdesigner.sql
	* db/mlstats_model_dbdesigner.xml
	
	DB schema modified to include a is_response_of FK.

2008-07-22  Liliana Tovar <lilitovar@gsyc.es>

	* db/data_model.sql